--- a/overseer/templates/overseer/base.html
+++ b/overseer/templates/overseer/base.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-        <a class="navbar-brand" href="{% url 'currency-index' %}">
+        <a class="navbar-brand" href="{% url 'homepage' %}">
           <svg xmlns="http://www.w3.org/2000/svg"
                height="16"
                width="16"
