--- a/dashboard/templates/dashboard/homepage.html
+++ b/dashboard/templates/dashboard/homepage.html
@@ -4,6 +4,18 @@
 <br>
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            {% for message in messages %}
+                <div class="alert alert-dismissible alert-danger">
+                  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                  <strong>There's been an error!</strong> {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
         <button class="badge bg-info">Active Reminders</button>
         <div class="col-12 d-flex flex-row">
             {% for birthday in all_birthdays %}
@@ -21,7 +33,8 @@
     </div>
     <div class="row">
         <div class="col-9 d-flex flex-row">
-            {% for forecast in weather_forecasts %}
+            {% for forecast_query in weather_forecasts %}
+            {% for forecast in forecast_query %}
             <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
               <div class="card-header">
                 <b>Forecast</b>
@@ -35,6 +48,7 @@
                         {{ forecast.city_country }}</a></h5>
                 </div>
             </div>
+            {% endfor %}
             {% endfor %}
         </div>
         <div class="col-1">
