--- a/memory_crystal/templates/memory_crystal/birthday_detail.html
+++ b/memory_crystal/templates/memory_crystal/birthday_detail.html
@@ -9,7 +9,7 @@
             <h3>Date: {{ birthday.bdate }}</h3>
             <br>
             <a type="button" class="btn btn-primary" href="{% url 'birthday-edit' birthday.id %}">Edit birthday</a>
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">Delete birthday</button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-bd-modal">Delete birthday</button>
             <br>
             <h2>Add a note:</h2>
             <div class="fieldWrapper">
@@ -26,13 +26,13 @@
                 <p><span class="badge bg-primary"><b>Title:</b></span>{{ note.title }}</p>
                 <p>{{ note.content | safe }}</p>
                 <a type="button" class="btn btn-primary" href="{% url 'birthdaynote-edit' note.id %}">Edit note</a>
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">Delete note</button>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-note-modal">Delete note</button>
                 <hr>
-                <div class="modal" id="delete-modal" tabindex="-1" aria-labelledby="delete-modal-label" aria-hidden="true">
+                <div class="modal" id="delete-note-modal" tabindex="-1" aria-labelledby="delete-modal-label" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="delete-modal-label">Delete Memo</h5>
+                                <h5 class="modal-title" id="delete-note-modal-label">Delete Memo</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true"></span>
                                 </button>
@@ -54,5 +54,26 @@
         </div>
     </div>
 </div>
-
+<div class="modal" id="delete-bd-modal" tabindex="-1" aria-labelledby="delete-modal-label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="delete-bd-modal-label">Delete Birthday</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true"></span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this birthday reminder? This action cannot be undone.</p>
+      </div>
+      <div class="modal-footer">
+        <form action="{% url 'birthday-delete' birthday.id %}" method="post">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-primary" value="Yes">
+        </form>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
