--- a/memory_crystal/templates/memory_crystal/offcanvas.html
+++ b/memory_crystal/templates/memory_crystal/offcanvas.html
@@ -9,17 +9,18 @@
   <div class="offcanvas-body">
     <div>
       <h3><b>Memos by category:</b></h3>
-      <ul>
-        {% for category in all_categories %}
-        <li>
-          <a href="{% url 'memo-category' category.name %}"> {{ category }}</a>
-          <form action="{% url 'category-delete' category.id %}">
-            {% csrf_token %}
-            <input type="submit" class="btn btn-danger btn-sm" value="Delete">
-          </form>
-        </li>
-        {% endfor %}
-      </ul>
+        <ul class="list-group">
+            {% for category in all_categories %}
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <a href="{% url 'memo-category' category.name %}"> {{ category }}</a>
+            <form method="post" action="{% url 'category-delete' category.id %}">
+              {% csrf_token %}
+              <input type="submit" class="btn btn-danger btn-sm" value="Delete">
+            </form>
+            <span class="badge bg-primary rounded-pill">{{ category.memos.all.count }}</span>
+          </li>
+          {% endfor %}
+        </ul>
       <a type="button" class="btn btn-primary" href="{% url 'category-create' %}">Add new category</a>
     </div>
   </div>
