--- a/currency_mogul/templates/currency_mogul/base.html
+++ b/currency_mogul/templates/currency_mogul/base.html
@@ -65,6 +65,16 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"></script>
+<div class="row">
+  <div class="col-12">
+    {% for message in messages %}
+    <div class="alert alert-dismissible alert-danger">
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <strong>There's been an error!</strong> {{ message }}
+    </div>
+    {% endfor %}
+  </div>
+</div>
 {% block content %}{% endblock %}
 </body>
 </html>
